--- a/public/views/includes/search.html
+++ b/public/views/includes/search.html
@@ -2,7 +2,8 @@
   <div class="form-group" data-ng-class="{'has-error': badQuery}">
     <div class="input-group">
 			<span class="input-group-addon" id="basic-addon1">
-				<span class="svg-search"></span>
+        <!-- <span class="svg-search"></span> -->
+        <span class="glyphicon glyphicon-search"></span>
 			</span>
       <input id="search" type="text" class="form-control" data-ng-model="q" data-ng-class="{'loading': loading}" placeholder="{{'Search for block, transaction or address'|translate}}" data-ng-submit="search()" focus="true">
     </div>
