--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -34,6 +34,7 @@ html,
 body {
   font-family: 'Source Sans Pro', sans-serif;
   height: 100%;
+  background-color: #F8F8F8;
   /* The html and body elements cannot have any padding or margin. */
 }
 
@@ -126,6 +127,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .btn-group .btn+.btn, .btn-group .btn+.btn-group, .btn-group .btn-group+.btn, .btn-group .btn-group+.btn-group {
 margin-left: 0;
 }
+thead {
+  background-color: #F8F8F8;
+}
 .table {
   font-family: 'Inconsolata', monospace;
 }
@@ -178,6 +182,39 @@ margin-left: 0;
 .gradient {
   background: linear-gradient(to right, #F9FBFC 0%, #F9FBFC 60%, #F4F7F9 50%, #F4F7F9 100%);
 }
+
+.m-container {
+  background-color: #ffffff;
+  margin: 30px 0 0 0;
+  border-radius: 10px
+}
+
+.layout .col-md-12 {
+  background-color: #fff;
+}
+.col-md-12 .column-top-half {
+  background-color: #fff;
+  padding-bottom: 25px;
+}
+.col-md-12  .btn-default {
+  margin: auto;
+  display: block;
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+  border-radius: 5px;
+  color: #578FFD;
+  padding: 9px 36px;
+  border-color: transparent;
+
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.col-md-12 .btn-default:hover{background-color: #f4f7f9;}
+.col-md-12 .btn-default:focus{background-color: #e9f8fe;}
+.col-md-12 hr {
+  margin-top: -16px;
+}
+
 .layout.col-md-7, .layout.col-md-4 {
   padding: 80px 0 0 0;
 }
@@ -321,15 +358,23 @@ margin-left: 0;
   font-weight: 100;
 }
 
+#search-form .glyphicon.glyphicon-search {
+  color: #CECED2;
+}
+
 .status {
     padding: 7px 15px;
     margin-top: 24px;
-    background: #132f4b;
-    color: #fff;
+    background: #181818;
+    color: #CECED2;
     height: 33px;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
+}
+
+.status .glyphicon-ok {
+  color: #41bf53;
 }
 
 .status .tooltip {
@@ -761,13 +806,13 @@ margin-left: 0;
 
 /* Index */
 #home .btn-more {
-  border-top: 1px solid #ddd;
-  margin: 30px auto 0;
+  /* border-top: 1px solid #ddd; */
+  margin: 20px auto 20px;
   text-align: center;
   width: 90%;
 }
 #home .btn-more .btn-default {
-  margin-top: -23px;
+  /* margin-top: -23px; */
 }
 
 #powered .powered-text {
