--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -273,7 +273,7 @@ thead {
 .svg-logo {
   height: 40px;
   width: 40px;
-  background-image: url('/img/decred-logo.svg');
+  background-image: url('/img/hx-logo.svg');
   background-size: 40px;
   background-repeat: no-repeat;
   display: inline-block;
