--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -86,16 +86,18 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 #file-input-wrapper {
   padding: 0;
   width: 100%;
+  input {
+    opacity: 0;
+    padding: 5px;
+  }
+  span {
+    padding-top: 5px;
+    width: 100%;
+  }
+  i {
+    display: none;
+  }
 }
-#file-input-wrapper input {
-  opacity: 0;
-  padding: 5px;
-}
-#file-input-wrapper span {
-  padding-top: 5px;
-  width: 100%;
-}
-#file-input-wrapper i { display: none; }
 
 /* Wrapper for page content to push down footer */
 #wrap {
@@ -136,49 +138,107 @@ thead {
 .table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
   background-color: #ededed;
 }
-.navbar { min-height: 80px; }
-.navbar-default .navbar-toggle { 
-  border-color: #fff;
-  margin-top: 15px;
-}
 
-.navbar-default .navbar-toggle .icon-bar { background-color: #fff; }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {background-color: #333333;}
+// STYLES FOR NAVBAR
+
+.navbar { 
+  min-height: 80px; 
+}
 
 .navbar-default {
   background-color: #000000;
   margin: 0;
   border: 0;
+  .navbar-toggle { 
+    border-color: #fff;
+    margin-top: 15px;
+    &:hover, &:focus {
+      background-color: red;
+    }
+    .icon-bar { 
+      background-color: #fff; 
+    }
+  }
+  .navbar-nav {
+    &>li>a {
+      color: #F4FBE8;
+      font-family: 'Source Sans Pro', sans-serif;
+      padding-left: 20px;
+      padding-right: 20px;
+      font-size: 19px;
+      &:hover {
+        background-color: #fff;
+      }
+    }
+    &>.active {
+      &>a {
+        background-color: #43a2ca;
+        color: #fff;
+        &:hover {
+          background-color: #fff;
+        }
+        &:focus {
+          background-color: #43a2ca;
+          color: #fff;
+        }
+      }
+    }
+  }
 }
 
-.navbar-default .navbar-nav>li>a {
-  color: #F4FBE8;
-  font-family: 'Source Sans Pro', sans-serif;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 19px;
-}
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus {
-  background-color: #43a2ca;
-  color: #fff;
-}
-
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a:hover {
-  background-color: #fff;
-}
-
-.navbar-form .form-group {
-  display: block;
-}
 
 .navbar-form {
   margin-top: 15px;
+  .form-group {
+    display: block;
+  }
+}
+
+.navbar-brand-list {
+  list-style: none;
+  .navbar-brand {
+    padding: 20px 20px 0 54px;
+    margin-left: 0 !important;
+    height: 0;
+    line-height: 0;
+    .svg-logo {
+      height: 40px;
+      width: 40px;
+      background-image: url('/img/hx-logo.svg');
+      background-size: 40px;
+      background-repeat: no-repeat;
+      display: inline-block;
+    }
+  }
+}
+
+.navbar-form {
+  margin-top: 23.5px;
+  width: 34%;
+  padding: 0;
+  padding-left: 15px;
+  .form-control {
+    border-left: 0;
+    box-shadow: none;
+    padding: 0;
+    text-align: left;
+    font-size: 1.73rem;
+    color: #5a6d81;
+    height: 33px;
+    border-radius: 0;
+    border-color: transparent;
+  }
 }
 
 .nav-tabs.nav-justified>li>a:hover {
   cursor: pointer;
 }
+
+.form-group {
+  width: 500px;
+  max-width: 100%;
+}
+
 .gradient {
   background: linear-gradient(to right, #F9FBFC 0%, #F9FBFC 60%, #F4F7F9 50%, #F4F7F9 100%);
 }
@@ -259,46 +319,6 @@ thead {
   font-weight: 700;
   overflow: hidden;
   padding-top: 3px;
-}
-.navbar-brand-list {
-  list-style: none;
-}
-.navbar-brand {
-  padding: 20px 20px 0 54px;
-  margin-left: 0 !important;
-  height: 0;
-  line-height: 0;
-}
-
-.svg-logo {
-  height: 40px;
-  width: 40px;
-  background-image: url('/img/hx-logo.svg');
-  background-size: 40px;
-  background-repeat: no-repeat;
-  display: inline-block;
-}
-
-.navbar-form {
-  margin-top: 23.5px;
-  width: 34%;
-  padding: 0;
-  padding-left: 15px;
-}
-.form-group {
-  width: 500px;
-  max-width: 100%;
-}
-.navbar-form .form-control {
-  border-left: 0;
-  box-shadow: none;
-  padding: 0;
-  text-align: left;
-  font-size: 1.73rem;
-  color: #5a6d81;
-  height: 33px;
-  border-radius: 0;
-  border-color: transparent;
 }
 
 .input-group {
@@ -779,7 +799,9 @@ thead {
   margin-top: -2px;
   opacity: 0;
 }
-.btn-copy.zeroclipboard-is-hover { color: #2a6496; }
+.btn-copy.zeroclipboard-is-hover { 
+  color: #2a6496; 
+}
 .btn-copy.zeroclipboard-is-active .tooltip { opacity: 1; }
 
 .tx-id {
@@ -810,9 +832,6 @@ thead {
   margin: 20px auto 20px;
   text-align: center;
   width: 90%;
-}
-#home .btn-more .btn-default {
-  /* margin-top: -23px; */
 }
 
 #powered .powered-text {
