--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <div data-ng-controller="HeaderController">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" data-ng-click="$root.isCollapsed = !$root.isCollapsed">
