--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -18,7 +18,7 @@
     <div class="navbar-collapse collapse" collapse="$root.isCollapsed">
       <ul class="nav navbar-nav">
         <li data-ng-repeat="item in menu" ui-route="/{{item.link}}" data-ng-class="{active: $uiRoute}">
-          <a href="/{{item.link}}">{{item.title|translate}}</a>
+          <a class="nav-buttons" href="/{{item.link}}">{{item.title|translate}}</a>
         </li>
       </ul>
       <span class="hidden-xs navbar-form navbar-left" data-ng-include src="'/views/includes/search.html'"></span>
