--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -5,43 +5,46 @@
 
 @charset "UTF-8";
 @font-face {
-  font-family: 'Inconsolata';
+  font-family: 'Lato';
   font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-700.woff'); /* IE9 Compat Modes */
-  src: local('Inconsolata-Bold'), 
-       url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-700.woff') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-700.woff2') format('woff'), /* Modern Browsers */
+  font-weight: 600;
+  src: url('/fonts/Lato-Semibold.woff'); /* IE9 Compat Modes */
+  src: local('Lato-Semibold'), 
+       url('/fonts/Lato-Semibold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/Lato-Semibold.woff') format('woff'), /* Modern Browsers */
 }
 @font-face {
-  font-family: 'Inconsolata';
+  font-family: 'Lato';
   font-style: normal;
-  font-weight: 300;
-  src: url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-regular.woff'); /* IE9 Compat Modes */
-  src: local('Inconsolata'), 
-       url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/inconsolata-v15-latin_vietnamese_latin-ext-regular.woff') format('woff'), /* Modern Browsers */
+  font-weight: 400;
+  src: url('/fonts/Lato-Regular.woff'); /* IE9 Compat Modes */
+  src: local('Lato-Regular'), 
+       url('/fonts/Lato-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/Lato-Regular.woff') format('woff'), /* Modern Browsers */
 }
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 300;
-  src: url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff'); /* IE9 Compat Modes */
-  src: local('Source Sans Pro'), 
-       url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff') format('woff'), /* Modern Browsers */
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff'); /* IE9 Compat Modes */
+//   src: local('Lato'), 
+//        url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff2') format('woff2'), /* Super Modern Browsers */
+//        url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff') format('woff'), /* Modern Browsers */
+// }
 
 
 html,
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   height: 100%;
   background-color: #F8F8F8;
   /* The html and body elements cannot have any padding or margin. */
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  &.mt-0 {
+    margin-top: 0;
+  }
   color: #132f4b;
 }
 
@@ -143,7 +146,7 @@ thead {
   background-color: #F8F8F8;
 }
 .table {
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Lato', monospace;
 }
 .table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
   background-color: #ededed;
@@ -174,7 +177,7 @@ thead {
       margin-right: 60px;
       &>li>a {
         color: #F4FBE8;
-        font-family: 'Source Sans Pro', sans-serif;
+        font-family: 'Lato', sans-serif;
         padding: 30px 30px;
         &.nav-buttons {
           font-size: 26px;                
@@ -201,6 +204,7 @@ thead {
     }
     .status {
       padding: 7px 15px;
+      background-color: #181818;
       margin-top: 24px;
       color: #CECED2;
       height: 33px;
@@ -276,10 +280,14 @@ thead {
 
 .m-container {
   background-color: #ffffff;
-  margin: 30px 0 0 0;
-  border-radius: 10px
+  border-radius: 10px;
+  padding: 28px 42px;
+  margin: 25px;
 }
 
+.block-dp {
+
+}
 .layout .col-md-12 {
   background-color: #fff;
 }
@@ -344,7 +352,7 @@ thead {
   padding-top: 30px;
 }
 .insight {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 60px;
   font-style: italic;
   font-weight: 700;
@@ -394,14 +402,14 @@ thead {
 
 #search::-webkit-input-placeholder {
   color: #CECED2;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-style: italic;
   font-weight: 100;
 }
 
 #search::-moz-placeholder {
   color: #CECED2;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 100;
 }
 
@@ -580,6 +588,12 @@ thead {
   font-size: 14px;
   font-weight: normal;
 }
+
+.datepicker-text {
+  color: $link-blue;
+  font-weight: 900;
+}
+
   .previous-date {
     float: right;
     padding-right: 20%
@@ -626,7 +640,7 @@ thead {
     opacity: 0.9;
   }
   .transactionId {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lato', monospace;
   }
   .svg-calender {
     height: 25px;
@@ -991,6 +1005,7 @@ a.v_highlight_more {
   }
   h1 {
     font-size: 26px;
+    margin-top: 0;
   }
   h2 {
     font-size: 22px;
