--- a/public/views/block_list.html
+++ b/public/views/block_list.html
@@ -2,16 +2,16 @@
 <section data-ng-controller="BlocksController" data-ng-init="list()">
   <div class="container">
   <div class="row">
-    <div class="layout col-xs-15 col-md-12 m-container">
+    <div class="layout col-xs-15 col-md-12 m-container p-4">
       <div class="page-header">
-        <h1>
-          <span translate>Blocks by date.</span>
+        <h1 class="mt-0">
+          <span translate>Blocks by date</span>
           <small>
               <span>
-                  <span>
+                  <span class="block-dp">
                     <a class="glyphicon glyphicon-circle-arrow-left" href="/blocks-date/{{pagination.prev}}"></a>
                   </span>
-                  <span datepicker-popup show-button-bar="false" data-ng-click="openCalendar($event)" data-ng-model="dt" is-open="opened" data-ng-required="true">
+                  <span datepicker-popup show-button-bar="false" data-ng-click="openCalendar($event)" data-ng-model="dt" is-open="opened" data-ng-required="true" class="datepicker-text">
                     {{pagination.current}}
                   </span>
                   
