--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,7 +7,7 @@
     <div id="home" class="row">
       <div class="layout col-xs-15 col-md-12 m-container">
         <div id="search-form-mobile" class="visible-xs" data-ng-include src="'/views/includes/search.html'"></div>
-        <h1 translate>Latest Blocks</h1>
+        <h1 class="mt-0" translate>Latest Blocks</h1>
         <table class="table table-hover" style="table-layout: fixed">
           <thead>
             <tr>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="layout col-xs-15 col-md-12 m-container">
-        <h2 translate>Latest Transactions</h2>
+        <h1 class="mt-0" translate>Latest Transactions</h1>
         <table class="table table-hover table-striped" style="table-layout: fixed;">
           <thead>
             <tr>
