--- a/public/views/block_list.html
+++ b/public/views/block_list.html
@@ -6,17 +6,17 @@
       <div class="page-header">
         <h1 class="mt-0">
           <span translate>Blocks by Date</span>
-          <small>
+          <small style="vertical-align: 2px">
               <span class="block-dp">
                   <span class="dp-arrow">
-                    <a class="glyphicon glyphicon-circle-arrow-left" href="/blocks-date/{{pagination.prev}}"></a>
+                    <a href="/blocks-date/{{pagination.prev}}"><i class="fas fa-arrow-circle-left fa-lg"></i></a>
                   </span>
                   <span datepicker-popup show-button-bar="false" data-ng-click="openCalendar($event)" data-ng-model="dt" is-open="opened" data-ng-required="true" class="datepicker-text">
-                    {{pagination.current}}
+                    {{pagination.current | date : 'M/d/yy' }}
                   </span>
                   
                   <span class="dp-arrow">
-                    <a class="glyphicon glyphicon-circle-arrow-right" href="/blocks-date/{{pagination.next}}"></a>
+                    <a href="/blocks-date/{{pagination.next}}"><i class="fas fa-arrow-circle-right fa-lg"></i></a>
                   </span>
                 </span>
           </small>
