--- a/public/views/status.html
+++ b/public/views/status.html
@@ -4,7 +4,7 @@
 
     <div class="col-xs-12 col-md-8">
       <div class="m-container">
-        <h2 translate>Sync Status</h2>
+        <h2 class="col-xs-12 translate mt-0">Sync Status</h2>
         <table class="table" data-ng-controller="StatusController" data-ng-init="getSync()">
           <tbody>
             <tr>
@@ -60,7 +60,7 @@
 
     <div class="col-xs-12 col-md-4">
       <div class="m-container">
-        <h2 translate>Decred node information</h2>
+        <h2 class="mt-0" translate>Decred node information</h2>
         <table class="table" data-ng-controller="StatusController" data-ng-init="getStatus('Info')">
           <thead  data-ng-include src="'/views/includes/infoStatus.html'"></thead>
           <tbody>
@@ -104,7 +104,7 @@
   <div class="row">
       <div class="col-xs-12">
         <div class="m-container">
-          <h2 translate>Last Block</h2>
+          <h2 class="mt-0" translate>Last Block</h2>
           <table class="table" style="table-layout: fixed" data-ng-controller="StatusController" data-ng-init="getStatus('LastBlockHash')">
             <thead data-ng-include src="'/views/includes/infoStatus.html'"></thead>
             <tbody>
