remove remaining references to decred and replace with hx

--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -3,10 +3,10 @@
 </a>
 <ul class="dropdown-menu">
   <li>
-  <a href="#" data-ng-click="setCurrency('DCR')" data-ng-class="{active: currency.symbol == 'DCR'}">DCR</a>
+  <a href="#" data-ng-click="setCurrency('HX')" data-ng-class="{active: currency.symbol == 'HX'}">HX</a>
   </li>
   <li>
-  <a href="#" data-ng-click="setCurrency('mDCR')" data-ng-class="{active: currency.symbol == 'mDCR'}">mDCR</a>
+  <a href="#" data-ng-click="setCurrency('mHX')" data-ng-class="{active: currency.symbol == 'mHX'}">mHX</a>
   </li>
   <li>
   <a href="#" data-ng-click="setCurrency('atoms')" data-ng-class="{active: currency.symbol == 'atoms'}">atoms</a>
