--- a/public/views/index.html
+++ b/public/views/index.html
@@ -53,7 +53,7 @@
               <td>
                 <a class="ellipsis" href="/tx/{{tx.txid}}">{{tx.txid}}</a>
               </td>
-              <td class="text-right"><span class="ellipsis">{{$root.currency.getConvertion(tx.valueOut) || tx.valueOut + ' DCR'}}</span></td>
+              <td class="text-right"><span class="ellipsis">{{$root.currency.getConvertion(tx.valueOut) || tx.valueOut + ' HX'}}</span></td>
             </tr>
           </tbody>
         </table>
@@ -61,8 +61,8 @@
       <!-- <div class="layout col-xs-15 col-md-4 col-md-offset-1">
         <h2 translate>About</h2>
         <p translate><strong>Powered by insight</strong>, an <a href="https://insight.is/"
-          target="_blank">open-source blockchain explorer</a>. with complete REST and websocket APIs that can be used for writing web wallets and other apps  that need more advanced blockchain queries than provided by dcrd RPC.  Check out the <a href="http://github.com/decred/insight" target="_blank">source code</a>.</p>
-        <p translate><strong>insight</strong> is still in development, so be sure to report any bugs and provide feedback for improvement at our <a href="https://github.com/decred/insight/issues" target="_blank">github issue tracker</a>.</p>
+          target="_blank">open-source blockchain explorer</a>. with complete REST and websocket APIs that can be used for writing web wallets and other apps  that need more advanced blockchain queries than provided by hxd RPC.  Check out the <a href="http://github.com/hybridnetwork/insight" target="_blank">source code</a>.</p>
+        <p translate><strong>insight</strong> is still in development, so be sure to report any bugs and provide feedback for improvement at our <a href="https://github.com/hybridnetwork/insight/issues" target="_blank">github issue tracker</a>.</p>
         <div id="powered" class="row">
           <div class="powered-text">
             <small class="text-muted" translate>Powered by</small>
