--- a/public/src/scss/theme.scss
+++ b/public/src/scss/theme.scss
@@ -4,6 +4,8 @@ $background: #f8f8f8;
 $link-blue: #007aff;
 $link-blue-hover: #0056b3;
 $white: #F4FBE8;
+$success: #50ae55;
+$danger: #f1453d;
 
 // $theme-colors: (
 //   "primary": $link-blue,
