--- a/public/src/scss/theme.scss
+++ b/public/src/scss/theme.scss
@@ -4,7 +4,7 @@ $background: #f8f8f8;
 $link-blue: #007aff;
 $link-blue-hover: #0056b3;
 $white: #F4FBE8;
-$success: #50ae55;
+$success: #4cd964;
 $danger: #f1453d;
 
 // $theme-colors: (
