--- a/public/views/block.html
+++ b/public/views/block.html
@@ -162,8 +162,8 @@
       </tbody>
     </table>
   </div>
-  <div data-ng-if="block.hash" data-ng-controller="transactionsController" data-ng-init="load('block')">
-    <h3 translate>Transactions</h3>
+  <div data-ng-if="block.hash" data-ng-controller="transactionsController" data-ng-init="load('block')" class="tx-container">
+    <h3 class="indent" translate>Transactions</h3>
     <div data-ng-include src="'/views/transaction/list.html'" when-scrolled="loadMore()"></div>
   </div>
 </section>
