transaction lists mostly set outside of ordering, transaction page laid out in new containers

--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -825,8 +825,8 @@ thead {
   .t {
     color: white;
   }
-  .text-danger { 
-    background: red; 
+  .text-danger {
+    color: $danger;
   }
   .text-warning {
     background: yellow;
