--- a/public/views/transaction.html
+++ b/public/views/transaction.html
@@ -26,86 +26,90 @@
       </a>
     </div>
   </div>
-  <div data-ng-if="tx.txid">
-    <h1><span translate>Transaction</span> 
-      <small data-ng-show="from_vin || from_vout">
-        <span data-ng-show="from_vin" translate>Input</span> 
-        <span data-ng-show="from_vout" translate>Output</span> 
-        <span>{{v_index}}</span>
-      </small>
-    </h1>
-    <div class="progress progress-striped active" data-ng-if="!tx.txid">
-      <div class="progress-bar progress-bar-info" style="width: 100%">
-        <span translate>Loading Transaction Details</span> <span class="loader-gif"></span>
-      </div>
-    </div>
+  <div class="m-container">
     <div data-ng-if="tx.txid">
-      <div class="well well-sm ellipsis">
-        <strong translate>Transaction</strong> 
-        <span class="txid text-muted">{{tx.txid}}</span>
-        <span class="btn-copy" ngclipboard data-clipboard-text={{tx.txid}}></span>
+      <h1><span translate>Transaction</span> 
+        <small data-ng-show="from_vin || from_vout">
+          <span data-ng-show="from_vin" translate>Input</span> 
+          <span data-ng-show="from_vout" translate>Output</span> 
+          <span>{{v_index}}</span>
+        </small>
+      </h1>
+      <div class="progress progress-striped active" data-ng-if="!tx.txid">
+        <div class="progress-bar progress-bar-info" style="width: 100%">
+          <span translate>Loading Transaction Details</span> <span class="loader-gif"></span>
+        </div>
       </div>
-      <h2 translate>Summary</h2>
-      <table class="table" style="table-layout: fixed">
-        <tbody>
-        <tr>
-          <td><strong translate>Size</strong></td>
-          <td class="text-muted text-right">{{tx.size}} (bytes)</td>
-        </tr>
-        <tr data-ng-show="tx.fees">
-          <td><strong translate>Fee Rate</strong></td>
-          <td class="text-muted text-right">{{$root.currency.getConvertion((tx.fees * 1000) / tx.size) + ' per kB' || ((tx.fees * 1000) / tx.size) + 'HX per kB'}}</td>
-        </tr>
-        <tr>
-          <td><strong translate>Received Time</strong></td>
-          <td data-ng-show="tx.time" class="text-muted text-right">{{tx.time * 1000|date:'medium'}}</td>
-          <td data-ng-show="!tx.time" class="text-muted text-right">N/A</td>
-        </tr>
-        <tr>
-          <td><strong translate>Mined Time</strong></td>
-          <td data-ng-show="tx.time" class="text-muted text-right">{{tx.blocktime * 1000|date:'medium'}}</td>
-          <td data-ng-show="!tx.time" class="text-muted text-right">N/A</td>
-        </tr>
-        <tr>
-          <td><strong translate>Included in Block</strong></td>
-          <td data-ng-show="tx.blockhash" class="text-muted text-right"> 
-            <div class="ellipsis">
-              <a href="/block/{{tx.blockhash}}">{{tx.blockhash}}</a>
-            </div>
-          <td data-ng-show="!tx.blockhash" class="text-muted text-right">Unconfirmed</td>
-        </tr>
-        <tr data-ng-show="tx.locktime">
-          <td><strong>LockTime</strong></td>
-          <td class="text-muted text-right">{{tx.locktime}}</td>
-        </tr>
-        <tr data-ng-show="tx.isCoinBase">
-          <td><strong>Coinbase</strong></td>
-          <td class="text-muted text-right">
-            <div class="ellipsis">
-                <span class="btn-copy ng-isolate-scope" ngclipboard data-clipboard-text={{tx.vin[0].coinbase}}></span>
-                <span class="ng-binding">{{tx.vin[0].coinbase}}</span>
-            </div>
-          </td>
-        </tr>
-	<tr data-ng-show="tx.isStakeGen">
-          <td><strong>Ticket that was spent</strong></td>
-          <td class="text-muted text-right">
-            <div class="ellipsis">
-              <a href="/tx/{{tx.ticketid}}">{{tx.ticketid}}</a>
-            </div>
-          </td>
-        </tr>
-	<tr data-ng-show="tx.isStakeRtx">
-          <td><strong>Ticket that was revoked</strong></td>
-          <td class="text-muted text-right">
-            <div class="ellipsis">
-              <a href="/tx/{{tx.ticketid}}">{{tx.ticketid}}</a>
-            </div>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+      <div data-ng-if="tx.txid">
+        <div class="ellipsis">
+          <strong translate>Transaction</strong> 
+          <span class="txid text-muted">{{tx.txid}}</span>
+          <span class="btn-copy" ngclipboard data-clipboard-text={{tx.txid}}></span>
+        </div>
+        <h2 translate>Summary</h2>
+        <table class="table" style="table-layout: fixed">
+          <tbody>
+          <tr>
+            <td><strong translate>Size</strong></td>
+            <td class="text-muted text-right">{{tx.size}} (bytes)</td>
+          </tr>
+          <tr data-ng-show="tx.fees">
+            <td><strong translate>Fee Rate</strong></td>
+            <td class="text-muted text-right">{{$root.currency.getConvertion((tx.fees * 1000) / tx.size) + ' per kB' || ((tx.fees * 1000) / tx.size) + 'HX per kB'}}</td>
+          </tr>
+          <tr>
+            <td><strong translate>Received Time</strong></td>
+            <td data-ng-show="tx.time" class="text-muted text-right">{{tx.time * 1000|date:'medium'}}</td>
+            <td data-ng-show="!tx.time" class="text-muted text-right">N/A</td>
+          </tr>
+          <tr>
+            <td><strong translate>Mined Time</strong></td>
+            <td data-ng-show="tx.time" class="text-muted text-right">{{tx.blocktime * 1000|date:'medium'}}</td>
+            <td data-ng-show="!tx.time" class="text-muted text-right">N/A</td>
+          </tr>
+          <tr>
+            <td><strong translate>Included in Block</strong></td>
+            <td data-ng-show="tx.blockhash" class="text-muted text-right"> 
+              <div class="ellipsis pull-right">
+                <a href="/block/{{tx.blockhash}}">{{tx.blockhash}}</a>
+              </div>
+            <td data-ng-show="!tx.blockhash" class="text-muted text-right">Unconfirmed</td>
+          </tr>
+          <tr data-ng-show="tx.locktime">
+            <td><strong>LockTime</strong></td>
+            <td class="text-muted text-right">{{tx.locktime}}</td>
+          </tr>
+          <tr data-ng-show="tx.isCoinBase">
+            <td><strong>Coinbase</strong></td>
+            <td class="text-muted text-right">
+              <div class="ellipsis">
+                  <span class="btn-copy ng-isolate-scope" ngclipboard data-clipboard-text={{tx.vin[0].coinbase}}></span>
+                  <span class="ng-binding">{{tx.vin[0].coinbase}}</span>
+              </div>
+            </td>
+          </tr>
+    <tr data-ng-show="tx.isStakeGen">
+            <td><strong>Ticket that was spent</strong></td>
+            <td class="text-muted text-right">
+              <div class="ellipsis">
+                <a href="/tx/{{tx.ticketid}}">{{tx.ticketid}}</a>
+              </div>
+            </td>
+          </tr>
+          <tr data-ng-show="tx.isStakeRtx">
+            <td><strong>Ticket that was revoked</strong></td>
+            <td class="text-muted text-right">
+              <div class="ellipsis">
+                <a href="/tx/{{tx.ticketid}}">{{tx.ticketid}}</a>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
+  <div class="m-container">
     <h2 translate>Details</h2>
     <div class="block-tx" data-ng-if="tx.txid">
       <div data-ng-include src="'/views/transaction/tx.html'"></div>
