--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -514,6 +514,11 @@ thead {
   border: 1px solid #eee;
 }
 
+.iib {
+  margin-left: 35px;
+  margin-bottom: 10px;
+}
+
 .btn {
   font-size: 1.6rem;
   color: #2970ff;
