changing container levels on the address page

--- a/public/views/transaction.html
+++ b/public/views/transaction.html
@@ -50,8 +50,8 @@
         <table class="table" style="table-layout: fixed">
           <tbody>
           <tr>
-            <td><strong translate>Size</strong></td>
-            <td class="text-muted text-right">{{tx.size}} (bytes)</td>
+            <td class="top-row"><strong translate>Size</strong></td>
+            <td class="top-row text-muted text-right">{{tx.size}} (bytes)</td>
           </tr>
           <tr data-ng-show="tx.fees">
             <td><strong translate>Fee Rate</strong></td>
