--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -247,8 +247,8 @@ thead {
     .svg-logo {
       height: 75px;
       width: 75px;
-      background-image: url(/img/hx-logo.svg);
-      background-size: 75px;
+      background-image: url(/img/hx-logo-testnet.svg);
+      background-size: 35px;
       background-repeat: no-repeat;
       display: inline-block;
     }
