--- a/public/src/scss/common.scss
+++ b/public/src/scss/common.scss
@@ -238,17 +238,27 @@ thead {
 
 .navbar-brand-list {
   list-style: none;
-  padding-left: 20px;
+  padding-left: 50px;
   .navbar-brand {
-    padding: 14px 20px 0 0;
+    padding: 0px 20px 0 0;
     margin-left: 0 !important;
     height: 0;
     line-height: 0;
     .svg-logo {
-      height: 75px;
-      width: 75px;
+      height: 70px;
+      width: 50px;
+      background-image: url(/img/hx-logo.svg);
+      background-size: 40px;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: inline-block;
+    }
+    .svg-logo-testnet {
+      height: 70px;
+      width: 50px;
       background-image: url(/img/hx-logo-testnet.svg);
-      background-size: 35px;
+      background-size: 40px;
+      background-position: center;
       background-repeat: no-repeat;
       display: inline-block;
     }
